<resources>
    <string name="app_name">Lab06</string>
    <string name="btn_new">New</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_title">Title</string>
    <string name="tv_content">Content</string>
    <string name="speakable_text_title">title</string>
    <string name="speakable_text_content">text</string>
</resources>