<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_new"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="new_Click"
            android:text="@string/btn_new"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_edit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="edit_Click"
            android:text="@string/btn_edit"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete_Click"
            android:text="@string/btn_delete"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>